--- a/stories/Button/button.css
+++ b/stories/Button/button.css
@@ -1,21 +1,19 @@
 .btn {
-  font-family: 'Nunito Sans', 'Helvetica Neue', Helvetica, Arial, sans-serif;
+  font-family: "Nunito Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
   font-weight: 700;
   border: 0;
   border-radius: 3em;
   cursor: pointer;
-  display: inline-block;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 8px;
   line-height: 1;
-}
-
-.icon-none {
-  display: none;
 }
 
 .btn--primary {
   color: white;
   background-color: #1ea7fd;
-  display: block;
 }
 
 .btn--secondary {
